// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card.Divider renders correctly 1`] = `
<DocumentFragment>
  <div
    class="c-card__item c-card__item--divider"
    data-name="card-divider"
    role="separator"
  >
    lorem
  </div>
</DocumentFragment>
`;

exports[`Card.Divider renders correctly as a separator 1`] = `
<DocumentFragment>
  <div
    class="c-card__divider"
    data-name="card-divider"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Card.Divider renders correctly with a colour 1`] = `
<DocumentFragment>
  <div
    class="c-card__item c-card__item--divider c-card__item--brand"
    data-name="card-divider"
  >
    lorem
  </div>
</DocumentFragment>
`;
